lib/04data_structure/rawbuf/rawbuf.h

//generated by gpt-5<noreply@openai.com> @ codex
#ifndef SHYOS_RAWBUF_H
#define SHYOS_RAWBUF_H

#include "result.h"

typedef struct RawBuf RawBuf;
struct RawBuf {
	void *data;
	usize cap;
	usize elem_size;
};

void raw_buf_drop(void *self);
void *raw_buf_clone_obj(const void *source);

IMPL_SHY_OWNED_RESULT(RawBuf, raw_buf_drop, raw_buf_clone_obj)

ResultRawBuf raw_buf_new(usize elem_size);
RawBuf raw_buf_from_raw_parts(void *data, usize cap, usize elem_size);
ResultRawBuf raw_buf_clone(const RawBuf *source);

i32 raw_buf_reserve(RawBuf *buf, usize capacity);
void *raw_buf_get(const RawBuf *buf, usize index);

#endif /* SHYOS_RAWBUF_H */