lib/04data_structure/rawbuf/lib.rs

//generated by gpt-5<noreply@openai.com> @ codex
#![no_std]

use core::ffi::c_void;
use shyos_result::{CResult, ERROR_INVALID_ARGUMENT, ERROR_OUT_OF_MEMORY};

#[repr(C)]
pub struct RawBuf {
    pub data: *mut c_void,
    pub cap: usize,
    pub elem_size: usize,
}

unsafe extern "C" {
    #[link_name = "raw_buf_new"]
    fn c_raw_buf_new(elem_size: usize) -> CResult<RawBuf>;
    #[link_name = "raw_buf_reserve"]
    fn c_raw_buf_reserve(buf: *mut RawBuf, capacity: usize) -> i32;
    #[link_name = "raw_buf_get"]
    fn c_raw_buf_get(buf: *const RawBuf, index: usize) -> *mut c_void;
    #[link_name = "raw_buf_drop"]
    fn c_raw_buf_drop(buf: *mut RawBuf);
}

#[repr(transparent)]
pub struct CRawBuf {
    raw: RawBuf,
}

unsafe impl Send for CRawBuf {}
unsafe impl Sync for CRawBuf {}

impl CRawBuf {
    pub fn new(elem_size: usize) -> CResult<Self> {
        if elem_size == 0 {
            return CResult::err(ERROR_INVALID_ARGUMENT);
        }
        match unsafe { c_raw_buf_new(elem_size) } {
            CResult::Ok(raw) => CResult::ok(Self { raw }),
            CResult::Err(error) => CResult::err(error),
        }
    }

    pub fn with_capacity(elem_size: usize, capacity: usize) -> CResult<Self> {
        let mut buf = match Self::new(elem_size) {
            CResult::Ok(buf) => buf,
            CResult::Err(error) => return CResult::err(error),
        };
        if let CResult::Err(error) = buf.reserve(capacity) {
            return CResult::err(error);
        }
        CResult::ok(buf)
    }

    pub fn capacity(&self) -> usize {
        self.raw.cap
    }

    pub fn elem_size(&self) -> usize {
        self.raw.elem_size
    }

    pub fn reserve(&mut self, capacity: usize) -> CResult<()> {
        if unsafe { c_raw_buf_reserve(&mut self.raw, capacity) } == 0 {
            CResult::ok(())
        } else {
            CResult::err(ERROR_OUT_OF_MEMORY)
        }
    }

    pub fn get(&self, index: usize) -> *mut c_void {
        assert!(index < self.capacity(), "RawBuf index out of bounds");
        unsafe { c_raw_buf_get(&self.raw, index) }
    }

    pub fn as_raw(&self) -> &RawBuf {
        &self.raw
    }

    pub fn as_raw_mut(&mut self) -> &mut RawBuf {
        &mut self.raw
    }
}

impl Drop for CRawBuf {
    fn drop(&mut self) {
        unsafe { c_raw_buf_drop(&mut self.raw) }
    }
}
